# pic_utils

./: .gitignore  AGENTS.md  pyproject.toml  pyrightconfig.json  requirements.txt
pic_utils/: __init__.py  bunch.py  electromagnetism.py  fbpic.py  functions.py  geometry.py  hdf5.py  json.py  linear_wake.py  materials.py  openpmd.py  plasma.py  quasistatic.py  spectral.py  units.py  wake_t.py  warpx.py
pic_utils/fbpic/: __init__.py  diagnostics.py
tests/: test_bunch.py  test_functions.py  test_geometry.py  test_hdf5.py  test_json.py  test_materials.py  test_plasma.py  test_spectral.py  test_units.py  utils.py
